# TRINDER

./: docker-compose.yaml  pyproject.toml  pytest.ini  test.db
alembic/: env.py
alembic/versions/: 2d775b5ad3b4_add_preference.py  4b20372f8dfd_add_new_table.py  4b98c341512d_add_new_table_fixed.py  4d34ee607693_add_index.py  6544cff20a9e_fix.py  729a7e18fd11_add_tg.py  74136df4d688_add_swipe.py  753594b8907c_add_photo.py  9af1aa5eb985_add_tg_1.py  b8cc2fb50ae6_add_swipe.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: main.js
frontend/src/components/: AuthGoogle.vue  Home.vue  Login.vue
frontend/src/components/auth/: AuthGoogle.vue  Login.vue  Register.vue
frontend/src/components/profile/: ProfileFormModal.vue  (+2 more)
src/: config.py  database.py  main.py
src/auth/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  shemas.py
src/auth/oauth/: oauth_google.py  router.py  service.py
src/core/: deck_builder_task.py  kafka.py  redis.py  scheduler.py
src/database/: dao.py
src/dependencies/: swipe.py  user.py
src/kafka/: service.py
src/notifier/: tg.py
src/profile/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/profile/S3/: client.py  service.py
src/profile/preference/: models.py  repository.py  router.py  schemas.py  service.py
src/swipe/: __init__.py  deck_builder.py  models.py  picker.py  repository.py  router.py  service.py
templates/: index.html
tests/: conftest.py
tests/auth/: test_api.py
tg_bot/: config.py  main.py
