[project]
name = "trinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=3.2.1",
    "aiogram>=3.26.0",
    "aiohttp>=3.13.3",
    "aiohttpx>=0.0.12",
    "aiokafka>=0.13.0",
    "aioredis>=2.0.1",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.129.2",
    "fastapi-cache2>=0.2.2",
    "passlib>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
